# AEGIS_PLATFORM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.lite.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: next.config.js  package-lock.json  package.json  tailwind.config.js
demo-scenarios/: README.md  denial_management.json  patient_360.json
demo/pwa/: index.html  manifest.json  sw.js
docs/: 00_PLATFORM_OVERVIEW_VISION.md  01_HIGH_LEVEL_DESIGN.md  02_LOW_LEVEL_DESIGN.md  03_FUNCTIONAL_SPECIFICATION.md  04_NON_FUNCTIONAL_SPECIFICATION.md  05_PLAN_OF_ACTION.md  ACTION_PLAN.md  AEGIS_VS_N8N_KOGO.md  AGENT_BUILDING_MECHANISM.md  ARCHITECTURE_REVIEW.md  COMPLETION_STATUS.md  COVERAGE_ANALYSIS.md  COWORK_IMPLEMENTATION_PLAN.md  DEMO_ENHANCEMENTS.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_STRUCTURE.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  INVESTOR_DEMO_GUIDE.md  LOCAL_TESTING.md  MASTER_PLAN.md  ONCOLIFE_CKM_ARCHITECTURE.md  ORCHESTRATION_ENGINE_SPEC.md  PHASE1_PHASE2_COMPLETION.md  PLATFORM_ANGLE_REVIEW.md  PLATFORM_OVERVIEW.md  PLATFORM_VISION.md  README.md  REBRAND_TESTING_GUIDE.md  ROADMAP.md  TESTING_SUMMARY.md  VERITOS_BRAND_POSITIONING.md
docs/adr/: 001-graph-database-selection.md  002-ontology-standards.md  003-multi-tenancy-strategy.md  004-authentication-approach.md  005-llm-provider-strategy.md  006-event-driven-architecture.md  007-api-versioning-strategy.md
docs/architecture/: README.md
docs/archive/: COMPLETION_STATUS.md  ONCOLIFE_INTEGRATION.md  QUICK_STATUS.md  STATUS_REVIEW.md
docs/ontology/: README.md
infrastructure/: README.md
infrastructure/docker/: docker-compose.yml
infrastructure/observability/: alerts.yml  prometheus.yml
infrastructure/scripts/: start-local.ps1  stop-local.ps1
ontology/gremlin_schema/: schema.groovy
ontology/owl/: clinical-domain.owl  (+2 more)
scripts/: e2e_test.py  init-db.sql  load_sample_data.py  pg_hba.conf  run_git_prune.ps1  run_git_prune.sh
tests/: test_digital_twin.py  test_entity_query_api.py  test_graphql.py  test_mcp_adapter.py  test_observability.py  test_streaming_producer.py  test_vector_indexer.py  test_workflow.py
(+219 files in other folders)
