[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "AEGIS: The Agentic Operating System for Healthcare"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "AEGIS Team"}
]
keywords = ["healthcare", "ai", "agents", "knowledge-graph", "fhir", "hl7"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",  # Required for file uploads
    
    # Graph Database
    "gremlinpython>=3.7.0",
    
    # PostgreSQL / TimescaleDB
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    
    # Vector Database & Search
    "opensearch-py>=2.4.0",
    
    # Caching
    "redis>=5.0.0",
    
    # LLM & Agents
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "boto3>=1.34.0",  # AWS Bedrock
    
    # Healthcare Data Standards
    "fhir.resources>=7.0.0",
    "hl7apy>=1.3.4",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    
    # Async & HTTP
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "strawberry-graphql>=0.131.0",
]

[project.scripts]
aegis = "aegis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
